Fix layout alignment and restore Reset Vote functionality

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -99,8 +99,15 @@ body {
 }
 
 .scoreBtnWrapper {
-    display: flex; // flex-wrap: wrap;
-    justify-content: center;
+    height: 100%;
+    // display managed by JS (flex or none)
+    
+    .buttonsContainer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
     .scoreBtn {
         width: 100px;
         height: 100px;
